# tsr-2025-2

./: .gitignore  LICENSE  README.md
dofbotx_config/: package.xml  setup.cfg  setup.py
dofbotx_config/config/: param_vals.yaml
dofbotx_config/dofbotx_config/: parameter_server.py
dofbotx_interfaces/: CMakeLists.txt  package.xml
dofbotx_interfaces/srv/: GetStatus.srv
dofbotx_services/: package.xml  setup.cfg  setup.py
dofbotx_services/dofbotx_services/: dofbotx_client.py  dofbotx_server.py
nodes_topics_pkg/: CMakeLists.txt  package.xml
nodes_topics_pkg/scripts/: Template_python_node.py  my_node_py.py  number_pub_node_py.py
nodes_topics_pkg/src/: my_node_cpp.cpp  number_pub_node_cpp.cpp
nodos_topicos_cpp/: CMakeLists.txt  package.xml
nodos_topicos_cpp/src/: counter_node_cpp.cpp  number_pub_node_cpp.cpp
nodos_topicos_py/: package.xml  setup.cfg  setup.py
nodos_topicos_py/nodos_topicos_py/: nodo_contador.py  nodo_pub_numero.py
nodos_topicos_py/scripts/: nodo_robot_pub.py
notebooks/: Nodes _Topics.ipynb  README.md  Robot_movil_diferencial.ipynb  Robotica_serial_control.ipynb  Sensores_basicos.ipynb  message_and_services.ipynb
robot_pkg/: package.xml  setup.py
robot_pkg/robot_pkg/: robot_state.py
srv_act_pkg/: CMakeLists.txt  package.xml
srv_act_pkg/msg/: Numbers.msg
srv_act_pkg/src/: message_publisher.cpp  service_client.cpp  service_server.cpp  servicio_server.cpp
srv_act_pkg/srv/: CheckNumber.srv
